# WheatNNLeek

./: .travis.yml  LICENSE.txt  Makefile  README.md
src/core/: Cargo.toml
src/core/examples/: d2d.rs  lif_and_syn.rs  nsn-recheck-mode.rs  nsn.rs
src/core/src/: agents.rs  components.rs  connection_supervisor.rs  connectivity.rs  connectors.rs  devices.rs  events.rs  ffi.rs  lib.rs  models.rs  network.rs  node.rs  ode.rs  operation.rs  populations.rs  signals.rs  supervisor.rs  utils.rs
src/core/src/agents/: connections.rs  neurons.rs  synapses.rs
src/core/src/components/: channels_sets.rs  connection_component.rs  joints.rs  multi_in_component.rs  multi_out_component.rs  neuron_post_syn_component.rs  post_syn_joint.rs  simple_joint.rs  single_in_component.rs  single_out_component.rs  synapse_component.rs  tmp_contents.rs
src/core/src/connections/: mod.rs  static_connection.rs  stdp_connection.rs
src/core/src/connectivity/: channels_sets.rs  linker.rs  post_syn_joint.rs  s1_post.rs  s1_pre.rs  signal_2.rs  simple_joint.rs
src/core/src/connectors/: all_to_all.rs  all_to_all_except_diagonal.rs  array.rs  i_to_j.rs  linear.rs  mod.rs
src/core/src/devices/: neurons.rs  synapses.rs
src/core/src/examples/: sim.rs
src/core/src/models/: cb_ath_lif.rs  hodgkin_huxley.rs  iaf.rs  iz_markram1998.rs  izhikevich.rs  mod.rs  static_poisson.rs
src/core/src/operation/: firing_active_agent.rs  op_agent.rs  op_device.rs  op_population.rs
src/core/src/populations/: simple_firing_population.rs  simple_passive_population.rs
src/core/tests/: lib.rs
(+42 files in other folders)
