[package]
name = "wheatnnleek"
version = "0.1.0"
authors = ["WheatNNLeak Developers"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
custom_derive = "0.1.7"
enum_derive = "0.1.7"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
rand = "0.6.1"

[lib]
crate-type = ["rlib", "dylib"]

[profile.dev]
opt-level = 3
debug = false
