[package]
name = "wheatnnleek"
version = "0.3.0"
authors = ["WheatNNLeak Developers"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
uom = "0.23.0"
num-traits = "0.2"
rand = "0.6"
crossbeam-channel = "0.3"
lazy_static = "1.3.0"

[lib]
crate-type = ["rlib", "dylib"]

[profile.dev]
opt-level = 3
debug = false
